--- a/Domain/QAndA.Domain.Application/QAndA.Domain.Application.csproj
+++ b/Domain/QAndA.Domain.Application/QAndA.Domain.Application.csproj
@@ -14,7 +14,8 @@
 
   <ItemGroup>
     <Folder Include="Features\Answers\" />
-    <Folder Include="Features\AppUsers\" />
+    <Folder Include="Features\Identity\Handlers\" />
+    <Folder Include="Features\Identity\Requests\" />
     <Folder Include="Features\Posts\" />
     <Folder Include="Features\Questions\Handlers\Queries\" />
     <Folder Include="Features\Questions\Requests\Queries\" />
@@ -24,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0" />
   </ItemGroup>
 
