--- a/API/QAndA.API/appsettings.json
+++ b/API/QAndA.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "SOME_RANDOM_KEY_DO_NOT_SHARE",
+    "Issuer": "https://localhost:7297/",
+    "Audience": [ "https://localhost:4200" ],
+ 
+  },
+  "ConnectionStrings": {
+    "QandADBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QAndADbV01;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
