Audit trail added

--- a/Infrastructure/QAndA.Infrastructure.Identity/QAndA.Infrastructure.Identity.csproj
+++ b/Infrastructure/QAndA.Infrastructure.Identity/QAndA.Infrastructure.Identity.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\QAndA.Domain.Application\QAndA.Domain.Application.csproj" />
     <ProjectReference Include="..\..\Domain\QAndA.Domain.Entities\QAndA.Domain.Entities.csproj" />
+    <ProjectReference Include="..\QAndA.Infrastructure\QAndA.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
